# cross_compilation_practice

./: Cargo.toml  Cross.toml  Dockerfile  README.md
src/: main.rs
