[package]
name = "cross_compilation_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "signal", "sync", "parking_lot", "process"] }
uuid = { version = "1", default-features = false, features = ["fast-rng", "v4"] }
sysinfo = { version = "0.27" }

